<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">parashExpenseChecker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
   	<!-- AddClaim and AddExpense -->
	<string name="promptTitle"> Title: </string>
	<string name="hintTitle"> title </string>
	<string name="promptDate"> Date: </string>
	<string name="hintDD"> DD </string>
	<string name="hintMM"> MM </string>
	<string name="hintYYYY"> YYYY </string>
	<string name="slash"> / </string>
	<string name="to"> to </string>
	<string name="promptRange"> Range? </string>
	<string name="promptCost"> Cost: </string>
	<string name="hintCost"> cost </string>
	<string name="promptCurrency"> Currency: </string>
	<string name="hintCurrency"> CUR </string>
	
	<!-- Action Menu -->
	<string name="action_edit"> Edit </string>
	<string name="action_delete"> Delete </string>
	
	<!-- Claim List Item -->
	<string name="desc_see"> Look at the claim </string>
	<string name="desc_edit"> Edit the claim </string>
	<string name="desc_trash"> Throw away the claim </string>
	
	<!-- Main Activity -->
	<string name="add_claim"> Add a claim </string>
	
	<!-- Add Claim/Expense-->
	<string name="save"> Save </string>
	<string name="submit"> Submit </string>
	<string name="cancel"> Cancel </string>
	
	<!-- View Claim -->
	<string name="addExpense"> Add Expense </string>
	<string name="saveandret"> Save and Return </string>
	
	<!-- Expense Menu -->
	<string name="eExpense"> Edit Expense </string>
	<string name="dExpense"> Delete Expense </string>
	
	<!-- Claim Menu -->
	<string name="eClaim"> Edit Claim </string>
	<string name="dClaim"> Delete Claim </string>
	<string name="vClaim"> View Claim </string>
	<string name="submitClaim"> Submit Claim </string>
	<string name="mReturnedClaim"> Mark as Returned </string>
	<string name="mApprovedClaim"> Mark as Approved </string>
	<string name="emailClaim"> Email Claim </string>
	
</resources>
