<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item  
        android:id="@+id/edit_claim"  
        android:title="@string/eClaim"/>  

    <item  
        android:id="@+id/delete_claim"  
        android:title="@string/dClaim"/>  

    <item  
        android:id="@+id/view_claim"  
        android:title="@string/vClaim"/>  
        
   	<item 
   	    android:id="@+id/submit_claim"
   	    android:title="@string/submitClaim"/>
   	
   	<item 
   	    android:id="@+id/mark_approved_claim"
   	    android:title="@string/mApprovedClaim"/>
   	
   	<item 
   	    android:id="@+id/mark_returned_claim"
   	    android:title="@string/mReturnedClaim"/>
   	
   	<item 
   	    android:id="@+id/email_claim"
   	    android:title="@string/emailClaim"/>
   	
</menu>
