<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AddExpenseTheme">
    
	<TextView 
	    android:text="@string/promptTitle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	
	<EditText
	    android:id="@+id/et_expense_title"
	    android:hint="@string/hintTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
	
	<TextView
	    android:text="@string/promptDate"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <EditText 
	        android:id="@+id/et_expensedd"
	        android:hint="@string/hintDD"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:inputType="numberDecimal" />
	    
	    <TextView
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:id="@+id/et_expensemm"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintMM"
	        android:inputType="numberDecimal" />
	    
	    <TextView
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:id="@+id/et_expenseyyyy"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintYYYY"
	        android:inputType="numberDecimal" />
	   	
	</LinearLayout>
	
	<TextView 
	    android:text="@string/promptCost" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
	
	<EditText 
	    android:id="@+id/et_expenseCost"
	    android:hint="@string/hintCost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:inputType="numberDecimal" />

	<TextView 
	    android:text="@string/promptCurrency" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
	
	<EditText 
	    android:id="@+id/et_expenseCurrency"
	    android:hint="@string/hintCurrency"
	    android:layout_width="wrap_content"
	    android:maxEms="3"
	    android:layout_height="match_parent" />
	
	<Button 
	    android:id="@+id/b_saveExpense"
	    android:text="@string/save"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
</LinearLayout>
