<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AddExpenseTheme">
    
	<TextView 
	    android:text="@string/promptTitle"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	
	<EditText
	    android:text="@+id/et_title"
	    android:hint="@string/hintTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
	
	<TextView
	    android:text="@string/promptDate"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	
	<CheckBox
	    android:text="@string/promptRange"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	    
	<LinearLayout
	    android:id="@+id/ranged_date"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <EditText 
	        android:hint="@string/hintDD"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <TextView
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintMM" />
	    
	    <TextView
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintYYYY" />
	    
	    <!-- The following 6 views were given ideas of form rangei, i element of integers.
	    This is so they can be hidden if the Ranged? check box is unchecked -->
	    
	    <TextView 
	        android:id="@+id/range1"
	        android:paddingLeft="1dp"
	        android:paddingRight="1dp"
	        android:text="@string/to"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText 
	        android:id="@+id/range2"
	        android:hint="@string/hintDD"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <TextView
	        android:id="@+id/range3"
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:id="@+id/range4"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintMM" />
	    
	    <TextView
	        android:id="@+id/range5"
	        android:text="@string/slash"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"/>
	    
	    <EditText
	        android:id="@+id/range6"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:hint="@string/hintYYYY" />
	   	
	</LinearLayout>
	
	<TextView 
	    android:text="@string/promptCost" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
	
	<EditText 
	    android:hint="@string/hintCost"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />

	<TextView 
	    android:text="@string/promptCurrency" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />
	
	<EditText 
	    android:hint="@string/hintCurrency"
	    android:layout_width="wrap_content"
	    android:maxEms="3"
	    android:layout_height="match_parent" />
	
</LinearLayout>
