<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end" >

	    <ImageButton
	        android:id="@+id/b_deleteClaim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/eye"
	        android:background="#FFFFFF"
	        android:paddingRight="15dp"
	        android:contentDescription="@string/desc_trash" />
	    
	    <ImageButton
	        android:id="@+id/b_editClaim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/pencil"
	        android:background="#FFFFFF"
	        android:paddingRight="15dp"
	        android:contentDescription="@string/desc_edit" />
	    
	    <ImageButton
	        android:id="@+id/b_viewClaim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:src="@drawable/trash"
	        android:background="#FFFFFF"
	        android:paddingRight="15dp"
	        android:contentDescription="@string/desc_see" />
	    
	</LinearLayout>
</LinearLayout>
